# gempy

./: .buildinfo  .env.example  .gitignore  .travis.yml  AUTHORS.rst  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DevelopersGuide.md  DevelopersGuide.txt  Dockerfile  Kriging.html  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  WhatsNewGemPy3.md  about.html  api_reference.html  code.html  config.py  deploy.sh  dev-requirements.txt  environment.yml  environment_conda.yml  environment_pip.yml  genindex.html  index.html  installation.html  introducing_gempy_3.md  license.md  objects.inv  optional-requirements  optional-requirements.txt  projects.html  py-modindex.html  pyproject.toml  requirements.txt  (+8 more)
 requirements/: base-requirements.txt  dev-requirements.txt  docs_requirements.txt  optional-requirements.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
Data/: gempy.core.data.AdditionalData.html  gempy.core.data.Grid.html  gempy.core.data.KrigingParameters.html  gempy.core.data.MetaData.html  gempy.core.data.Options.html  gempy.core.data.Structure.html  gempy.core.data.Surfaces.html  gempy.core.data_modules.geometric_data.Orientations.html  gempy.core.data_modules.geometric_data.SurfacePoints.html  gempy.core.data_modules.stack.Faults.html  gempy.core.data_modules.stack.Series.html  gempy.core.data_modules.stack.Stack.html
GemPy API/: gempy.activate_interactive_df.html  gempy.add_orientations.html  gempy.add_structural_group.html  gempy.add_surface_points.html  gempy.calculate_gravity_gradient.html  gempy.compute_model.html  gempy.compute_model_at.html  gempy.create_data.html  gempy.create_geomodel.html  gempy.create_model.html  (+31 more)
(+2881 files in other folders)
